--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.15.4",
   "license": "MIT",
   "description": "Control Mi Home devices, such as Mi Robot Vacuums, Mi Air Purifiers, Mi Smart Home Gateway (Aqara) and more",
-  "repository": "aholstenson/miio",
+  "repository": "Sineos/miio",
   "main": "lib/index.js",
   "keywords": [
     "xiaomi",
@@ -23,7 +23,7 @@
     "node": ">=6.6.0"
   },
   "dependencies": {
-    "abstract-things": "^0.9.0",
+    "abstract-things": "https://github.com/Sineos/abstract-things.git",
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
     "deep-equal": "^1.0.1",
